Example yamls/Ingess crontrollers/04-hello-svc-v2.yaml
# ClusterIP-2
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
